Release version 0.53.0